文章分类和商品分类调整成一个表

--- a/application/admin/view/goods_category/addCategory.html
+++ b/application/admin/view/goods_category/addCategory.html
@@ -10,7 +10,7 @@
 
 <div class="x-body">
     <form class="layui-form" id='mainForm' method="post" action="addCategory">
-
+<input type="hidden" name="types" value="{$types|default='1'}">
         <div class="layui-form-item">
             <label class="layui-form-label">
                 所属分类
