--- a/application/admin/view/goods_category/articlecatelists.html
+++ b/application/admin/view/goods_category/articlecatelists.html
@@ -3,7 +3,7 @@
 <div class="x-body">
     <button class="layui-btn  layui-btn-small layui-btn-danger" onclick="delAll()">批量删除</button>
     <button class="layui-btn layui-btn-small "
-            onclick="x_admin_show('添加分类','addCategory.html',500,410)"></i>添加分类</button>
+            onclick="x_admin_show('添加分类','addCategory.html?types=2',500,410)"></i>添加分类</button>
     <button class="layui-btn layui-btn-small "
             onclick="x_admin_show('添加分类','Categoryinfo.html',500,410)"></i>分类详情</button>
     <button onclick="javascript:location.reload()" class="layui-btn layui-btn-small">刷新</button>
