--- a/application/admin/view/goods_category/lists.html
+++ b/application/admin/view/goods_category/lists.html
@@ -41,7 +41,7 @@
             <td>
 
                 <button class="layui-btn layui-btn-mini" onclick="x_admin_show('编辑用户','edit.html?id={$vo.id}',500,410)">编辑</button>
-               {if condition="!empty($vo._child)"} <button class="layui-btn layui-btn-mini" onclick="x_admin_show('查看下级分类','lists.html?id={$vo.id}',1600,800,30)">查看下级分类</button>{/if}
+               {if condition="!empty($vo._child)"} <button class="layui-btn layui-btn-mini" onclick="x_admin_shows('查看下级分类','lists.html?id={$vo.id}','','',-5)">查看下级分类</button>{/if}
                 <button onclick="delUser(this,{$vo.id})" class="layui-btn layui-btn-mini layui-btn-danger">删除</button>
             </td>
         </tr>
