修改接口文件

--- a/application/admin/view/index/welcome.html
+++ b/application/admin/view/index/welcome.html
@@ -6,7 +6,8 @@
 
 
         <div id="main1" style="width: 600px;height:400px;margin-left: 40px;float: left"></div>
-        <div id="main2" style="width: 600px;height:400px;margin-left: 40px;float: left"></div>
+        <div id="main2" style="width: 600px;height:400px;margin-left: 40px;float: right"></div>
+        <div style="clear: both"></div>
 <script>
     var myChart1 = echarts.init(document.getElementById('main1'));
     var myChart2 = echarts.init(document.getElementById('main2'));
